--- a/src/app/components_paginas/categorias-economicas/categorias-economicas.component.html
+++ b/src/app/components_paginas/categorias-economicas/categorias-economicas.component.html
@@ -15,7 +15,7 @@
           <div class="ani__cont-frame_img" id="img1"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">C: The Money of Soul and Possibility Control </h2>
+          <a class="ani__cont-der_title">C: The Money of Soul and Possibility Control </a>
           <h3 class="ani__cont-der_desc">El gobierno japonés fue rescatado al borde del derrumbamiento financiero por el Fondo de Riqueza Soberano. Para sus ciudadanos, sin embargo, la vida no se ha mejorado. Y el paro, el crimen, el suicidio y la desesperación no tienen freno. Kimimaro, criado por su abuela materna después de la desaparición de su padre y la muerte de su madre, es un estudiante de beca cuyo sueño es evitar todo esto y vivir una vida estable.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -32,7 +32,7 @@
           <div class="ani__cont-frame_img" id="img2"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Spice and Wolf</h2>
+          <a routerLink="/spice" class="ani__cont-der_title">Spice and Wolf</a>
           <h3 class="ani__cont-der_desc">Craft Lawrence, un vendedor ambulante de 25 años que viaja de ciudad en ciudad vendiendo y comprando varias cosas, ganandose la vida como muchos durante la Edad Media en Europa. Una noche pasando por el pueblo de Pasroe, él encuentra en su carro a una joven llamada Holo quien es una deidad pagana de 250 años de edad. Ella se mira como una joven normal de 15 años, excepto por la cola y orejas de lobo.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -52,7 +52,7 @@
           <div class="ani__cont-frame_img" id="img3"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Eden of The East</h2>
+          <a routerLink="/eden" class="ani__cont-der_title">Eden of The East</a>
           <h3 class="ani__cont-der_desc">Lunes 22 de Noviembre de 2010. 10 misiles golpen el territorio japonés. Sin embargo, este acto terrorista sin precedentes que sería conocido como el ?Lunes Descuidado?, no causan víctima alguna y rápidamente es olvidado por casi todos. 3 meses después? Saki Morimi es una joven mujer de los Estados Unidos que está en su viaje de graduación. Pero cuando se encuentra frente a la Casa Blanca, se ve en apuros y sólo la inesperada intervención de un compatriota suyo le salva. </h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -72,7 +72,7 @@
           <div class="ani__cont-frame_img" id="img4"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Maoyu Mao Yuusha </h2>
+          <a class="ani__cont-der_title">Maoyu Mao Yuusha </a>
           <h3 class="ani__cont-der_desc">Tras un largo y complicado viaje, el héroe llega finalmente al castillo de Maou, la señora oscura, solo para descubrir que le piden ayuda. El héroe explica que la guerra que los demonios han provocado con los humanos ya ha matado a miles de personas y ha dejado a aun más en la miseria. La reina de los demonios sin embargo le responde que gracias a la guerra, la sociedad humana ha podido unirse más.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
