--- a/src/app/components_paginas/categorias-economicas/categorias-economicas.component.scss
+++ b/src/app/components_paginas/categorias-economicas/categorias-economicas.component.scss
@@ -234,3 +234,7 @@
 #img4{
   background-image: url("https://www.justwatch.com/images/poster/82841985/s332/temporada-1");
 }
+
+a{
+  text-decoration: none;
+}
