--- a/src/app/components_paginas/categorias-humanidades/categorias-humanidades.component.html
+++ b/src/app/components_paginas/categorias-humanidades/categorias-humanidades.component.html
@@ -15,7 +15,7 @@
           <div class="ani__cont-frame_img" id="img1"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Kimi no uso</h2>
+          <a routerLink="/wakimi" class="ani__cont-der_title">Kimi no uso</a>
           <h3 class="ani__cont-der_desc">Arima Kosei es un prodigio del piano, y cualquier niño músico del mundo conoce su nombre, pero cuando su madre y también maestra fallece, se desmorona en mitad de un recital y desde ese momento es completamente incapaz de escuchar el sonido de su piano aunque no tenga problemas de oído. </h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -32,7 +32,7 @@
           <div class="ani__cont-frame_img" id="img2"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Food Wars</h2>
+          <a routerLink="/food" class="ani__cont-der_title">Food Wars</a>
           <h3 class="ani__cont-der_desc">Young Black Jack es una precuela de la serie clásica de Osamu Tezuka que trata sobre un brillante e inconformista médico que ejerce sin licencia. En su historia, vemos a Black Jack cuando todavía estaba estudiando medicina en los años sesenta.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -49,7 +49,7 @@
           <div class="ani__cont-frame_img" id="img3"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Sketchbook ~full color´s~</h2>
+          <a class="ani__cont-der_title">Sketchbook ~full color´s~</a>
           <h3 class="ani__cont-der_desc">La historia de este anime original comienza cuando la protagonista, una chica de 14 años llamada Ohto Ai, escucha una misteriosa voz mientras camina por la noche en su pueblo natal. Esa voz le otorga un huevo y le indica: “Si deseas cambiar el futuro, solo tienes que elegir ahora. Ahora, cree en ti misma y rompe el huevo”. Lo que le espera a Ai después de romper el huevo...
           </h3>
           <div class="ani__cont-der_sub">
@@ -67,7 +67,7 @@
           <div class="ani__cont-frame_img" id="img4"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Given</h2>
+          <a routerLink="/given"class="ani__cont-der_title">Given</a>
           <h3 class="ani__cont-der_desc">Ritsuka Uenoyama es un joven que se aficionó a la guitarra siendo muy joven y tras mucho esfuerzo, consiguió alcanzar el nivel que quería, pero la guitarra que tanto amaba ha perdido su brillo y no le divierte ni le apasiona como antes... hasta que un día conoce a Mafuyu Sato, un joven que se aferra a una guitarra con toda su alma pese a que no sabe tocarla y quien le pedirá que le enseñe a tocar... haciendo que todo en la vida de Uenoyama cambie y la música acelere nuevamente su corazón.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
