--- a/src/app/components_paginas/categorias-humanidades/categorias-humanidades.component.scss
+++ b/src/app/components_paginas/categorias-humanidades/categorias-humanidades.component.scss
@@ -234,3 +234,7 @@
 #img4{
   background-image: url("https://img1.ak.crunchyroll.com/i/spire2/b0ccaf974df65b4a74c0b84f3696ecd41562788869_main.jpg");
 }
+
+a{
+  text-decoration: none;
+}
