--- a/src/app/components_paginas/categorias-juridica/categorias-juridica.component.html
+++ b/src/app/components_paginas/categorias-juridica/categorias-juridica.component.html
@@ -15,7 +15,7 @@
           <div class="ani__cont-frame_img" id="img1"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Ace Attorney</h2>
+          <a routerLink="/ace" class="ani__cont-der_title">Ace Attorney</a>
           <h3 class="ani__cont-der_desc">Phoenix Wright es un abogado novato que ha completado sus prácticas con Mia, una conocida abogada. Con la idea de defender a quienes más lo necesitan.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -32,7 +32,7 @@
           <div class="ani__cont-frame_img" id="img2"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Death Note</h2>
+          <a routerLink="/death" class="ani__cont-der_title">Death Note</a>
           <h3 class="ani__cont-der_desc">Light Yagami es un estudiante brillante con mucho futuro que se aburre a más no poder. Pero todo cambia cuando encuentra la Death Note, un cuaderno que dejó caer un rebelde dios de la muerte.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -49,7 +49,7 @@
           <div class="ani__cont-frame_img" id="img3"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Dectetive Conan</h2>
+          <a class="ani__cont-der_title">Dectetive Conan</a>
           <h3 class="ani__cont-der_desc">Shinichi Kudo es hijo de un famoso escritor de novelas de misterio, pero él también tiene sus propias habilidades de genio, y es que pese a ser un adolescente, es un gran detective que ayuda a la policía a resolver muchos casos</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -66,7 +66,7 @@
           <div class="ani__cont-frame_img" id="img4"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Hetalia</h2>
+          <a routerLink="/hetalia" class="ani__cont-der_title">Hetalia</a>
           <h3 class="ani__cont-der_desc">Los hechos que aparecen en esta historia hacen referencia principalmente a acontecimientos históricos ocurridos entre la Primera Guerra Mundial y la Segunda Guerra Mundial. La serie suele usar sátira y comedia para representar situaciones históricas, políticas y militares entre los países protagonistas, emulando los contactos sociales con los personajes.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
