--- a/src/app/components_paginas/categorias-juridica/categorias-juridica.component.scss
+++ b/src/app/components_paginas/categorias-juridica/categorias-juridica.component.scss
@@ -235,3 +235,7 @@
 #img4{
   background-image: url("https://es.web.img2.acsta.net/pictures/21/03/24/16/48/3868977.jpg");
 }
+
+a{
+  text-decoration: none;
+}
