--- a/src/app/components_paginas/categorias-salud/categorias-salud.component.html
+++ b/src/app/components_paginas/categorias-salud/categorias-salud.component.html
@@ -15,7 +15,7 @@
           <div class="ani__cont-frame_img" id="img1"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Cells at work</h2>
+          <a routerLink="/cells" class="ani__cont-der_title">Cells at work</a>
           <h3 class="ani__cont-der_desc">Esta es una historia sobre ti, sobre el interior de tu cuerpo. Según varios estudios, el cuerpo humano posee unos 30 billones de células. Estas células trabajan duro cada día dentro de su mundo, que es tu cuerpo. Desde los Glóbulos Rojos que portan el oxígeno, hasta los Glóbulos Blancos que se enfrentan a las amenazas de las bacterias.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -32,7 +32,7 @@
           <div class="ani__cont-frame_img" id="img2"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Young Black Jack</h2>
+          <a routerLink="/young" class="ani__cont-der_title">Young Black Jack</a>
           <h3 class="ani__cont-der_desc">Young Black Jack es una precuela de la serie clásica de Osamu Tezuka que trata sobre un brillante e inconformista médico que ejerce sin licencia. En su historia, vemos a Black Jack cuando todavía estaba estudiando medicina en los años sesenta.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -49,7 +49,7 @@
           <div class="ani__cont-frame_img" id="img3"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Wonder Egg Priority</h2>
+          <a routerLink="egg" class="ani__cont-der_title">Wonder Egg Priority</a>
           <h3 class="ani__cont-der_desc">La historia de este anime original comienza cuando la protagonista, una chica de 14 años llamada Ohto Ai, escucha una misteriosa voz mientras camina por la noche en su pueblo natal. Esa voz le otorga un huevo y le indica: “Si deseas cambiar el futuro, solo tienes que elegir ahora. Ahora, cree en ti misma y rompe el huevo”. Lo que le espera a Ai después de romper el huevo...
           </h3>
           <div class="ani__cont-der_sub">
@@ -67,7 +67,7 @@
           <div class="ani__cont-frame_img" id="img4"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Monster Girl Doctor</h2>
+          <a routerLink="/monster" class="ani__cont-der_title">Monster Girl Doctor</a>
           <h3 class="ani__cont-der_desc">En el pueblo de Lindworm donde monstruos y humanos coexisten, el Dr. Glenn está a cargo de una clínica para chicas monstruo con su enfermera, una lamia llamada Sapphee. Recibir una propuesta de matrimonio por parte de una centauro herida en batalla, palpar suavemente la herida de una sirena, o suturar las delicadas heridas de una golem son cosas cotidianas en su trabajo. El doctor Glenn hace su trabajo con gracia y profesionalismo.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
