--- a/src/app/components_paginas/categorias-salud/categorias-salud.component.scss
+++ b/src/app/components_paginas/categorias-salud/categorias-salud.component.scss
@@ -234,3 +234,7 @@
 #img4{
   background-image: url("https://i0.wp.com/jellygoods.com/wp-content/uploads/2019/12/El-anime-de-Monster-Girl-Doctor-se-estrenar%C3%A1-en-el-2020-%E2%80%93-Lista-de-animes-recomendados-2020.jpg?resize=494%2C700&ssl=1");
 }
+
+a{
+  text-decoration: none;
+}
