--- a/src/app/components_paginas/categorias/categorias.component.scss
+++ b/src/app/components_paginas/categorias/categorias.component.scss
@@ -235,3 +235,7 @@
 #img4{
   background-image: url("https://www.tallon4.es/wp-content/uploads/2018/02/Steins-Gate-0-Anime-Imagen-01.jpg")
 }
+
+a{
+  text-decoration: none;
+}
