--- a/src/app/components_paginas/noticias/noticias.component.html
+++ b/src/app/components_paginas/noticias/noticias.component.html
@@ -36,7 +36,7 @@
 
 <aside class="animes">
   <div class="animec">
-    <a routerLink="" class="tituloa">Nisekoi</a>
+    <a routerLink="/nisekoi" class="tituloa">Nisekoi</a>
     <div class="imga">
       <img class="imga" src="https://ramenparados.com/wp-content/uploads/2015/03/normal_main2.jpg" alt="">
     </div>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="animec3">
-    <a routerLink="" class="tituloa">Date A Live</a>
+    <a routerLink="/date" class="tituloa">Date A Live</a>
     <div class="imga">
       <img class="imga" src="https://img1.ak.crunchyroll.com/i/spire2/b8e65149dabdb9e4cb8f4e239fe7e0d61649905261_full.jpg" alt="">
     </div>
