--- a/src/app/components_paginas/series/series.component.html
+++ b/src/app/components_paginas/series/series.component.html
@@ -43,7 +43,7 @@
       </div>
       <div class="main__column-item">
           <div class="main__column-item_img" id="img10"></div>
-          <a class="main__column-item_title"routerLink="/">Cells at Work</a>
+          <a class="main__column-item_title"routerLink="/cells">Cells at Work</a>
       </div>
       <div class="main__column-item">
           <div class="main__column-item_img" id="img11"></div>
