--- a/src/app/pages/cells/cells.component.html
+++ b/src/app/pages/cells/cells.component.html
@@ -1,5 +1,5 @@
 <div class="frame1">
-  <h1 class="frame1_titulo">Death Note</h1>
+  <h1 class="frame1_titulo">Cells at work!</h1>
   <div class="frame11">
       <div class="frame111">
           <div class="frame111_img"></div>
@@ -20,13 +20,13 @@
                   <p class="frame112_11_titulos">Episodios</p>
               </div>
               <div class="frame112_12">
-                  <p class="frame112_12_textos">Misterio,sobrenatural,thriller</p>
-                  <p class="frame112_12_textos">Tsugumi Ōba y Takeshi Obata</p>
+                  <p class="frame112_12_textos">Aventura, Comedia</p>
+                  <p class="frame112_12_textos">Akane Shimizu</p>
                   <p class="frame112_12_textos">Japones</p>
                   <p class="frame112_12_textos">Kenichirō Suehiro</p>
-                  <p class="frame112_12_textos">Madhouse</p>
-                  <p class="frame112_12_textos">3 de octubre de 2006</p>
-                  <p class="frame112_12_textos">37 + 2 especiales</p>
+                  <p class="frame112_12_textos">David Production</p>
+                  <p class="frame112_12_textos">7 de julio de 2018</p>
+                  <p class="frame112_12_textos">13 + 1 ova</p>
               </div>
           </div>
           <h3 class="frame112_ver">Ver por</h3>
@@ -38,11 +38,11 @@
           </div>
       </div>
   </div>
-  <h2 class="frame1_sub">Facultad de Derecho</h2>
+  <h2 class="frame1_sub">Facultad de Salud</h2>
   <div class="frame12">
       <div class="frame121">
-          <h3 class="frame121_carrera">Derecho</h3>
-          <p class="frame121_text">La dualidad de justicia, de como se debe interpretar un rol en la sociedad, ya sea para bien o para mal y como la propia justicia puede llegar a ser transgiversada</p>
+          <h3 class="frame121_carrera">Salud</h3>
+          <p class="frame121_text">Funcionamiento del cuerpo a niveles de microorganismos.</p>
       </div>
   </div>
 </div>
