--- a/src/app/pages/cells/cells.component.scss
+++ b/src/app/pages/cells/cells.component.scss
@@ -68,7 +68,7 @@
   width: 328px;
   height: 465px;
 
-  background: url("https://cl.buscafs.com/www.levelup.com/public/uploads/images/422049_832x1248.jpg");
+  background: url("https://images-ext-1.discordapp.net/external/TUuHXoDoZ8L_As-pU0bp8vTaUiR5pwy7OdIs3mEYrzQ/https/pics.filmaffinity.com/hataraku_saibou_tv_series-214469058-large.jpg?width=355&height=473");
   background-size: 100%;
   border-radius: 20px;
 
