--- a/src/app/pages/eden/eden.component.html
+++ b/src/app/pages/eden/eden.component.html
@@ -1,1 +1,48 @@
-<p>eden works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Eden of the East</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Lunes 22 de Noviembre de 2010. 10 misiles golpen el territorio japonés. Sin embargo, este acto terrorista sin precedentes que sería conocido como el ?Lunes Descuidado?, no causan víctima alguna y rápidamente es olvidado por casi todos. 3 meses después? Saki Morimi es una joven mujer de los Estados Unidos que está en su viaje de graduación. Pero cuando se encuentra frente a la Casa Blanca, se ve en apuros y sólo la inesperada intervención de un compatriota suyo le salva. Sin embargo, este hombre que se presenta como Akira Takizawa, es un completo misterio. En primer lugar, parece haber perdido la memoria. En segundo lugar, está desnudo, excepto por el arma que sostiene en una mano y el teléfono móvil que tiene en la otra. Un teléfono cargado con 8.200.000.000 yen en efectivo digital.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Romance,thriller</p>
+                  <p class="frame112_12_textos">Kenji Kamiyama</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Kenji Kawai</p>
+                  <p class="frame112_12_textos">Production I.G</p>
+                  <p class="frame112_12_textos">26 de septiembre de 2009</p>
+                  <p class="frame112_12_textos">11</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/higashi-no-eden" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/higashi-no-eden/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Economia</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Economia</h3>
+          <p class="frame121_text">Organización económica para solventar a un país o región.</p>
+      </div>
+  </div>
+</div>
