--- a/src/app/pages/kaguya/kaguya.component.html
+++ b/src/app/pages/kaguya/kaguya.component.html
@@ -1,1 +1,42 @@
-<p>kaguya works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Kaguya-sama: Love Is War</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">El presidente del consejo estudiantil, Miyuki Shirogane, y la vicepresidente Kaguya Shinomiya parecen ser la pareja perfecta. Kaguya es la hija de un rico conglomerado familiar, y Miyuki es el mejor alumno de la escuela y es bien conocido en toda la prefectura. Aunque se gustan, son muy orgullosos como para confesar su amor, ya que creen que quien lo haga primero estará por debajo de quien reciba la confesión. La historia sigue sus múltiples esquemas para hacer que el otro se confiese.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Comedia romántica, drama, escolar, psicológico</p>
+                  <p class="frame112_12_textos">Aka Akasaka</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Kei Haneoka</p>
+                  <p class="frame112_12_textos">A-1 Pictures</p>
+                  <p class="frame112_12_textos">12 de enero de 2019</p>
+                  <p class="frame112_12_textos">12</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/kaguyasama-wa-kokurasetai-ultra-romantic" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
+
