--- a/src/app/pages/komi/komi.component.html
+++ b/src/app/pages/komi/komi.component.html
@@ -1,1 +1,43 @@
-<p>komi works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Komi-san</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">El viaje a 100 amigos comienza con una sola conversación. El mayor sueño de la estudiante de secundaria socialmente ansiosa Shouko Komi es hacer amigos, ¡pero todos en la escuela confunden su ansiedad social paralizante con una reserva fría! Con todo el cuerpo estudiantil manteniendo su distancia y Komi incapaz de pronunciar una sola palabra, la amistad podría estar siempre fuera de su alcance.
+
+                  Hitohito Tadano es un alhelí total, y así es como le gusta. Vive para mezclarse con el fondo. Todo eso cambia cuando se encuentra solo en un salón de clases el primer día de la escuela secundaria con la legendaria Komi. Rápidamente, se da cuenta de que ella no es distante, que es súper incómoda. ¡Ahora ha hecho su misión ayudarla en su búsqueda para hacer 100 amigos!</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Cosas de la vida, Comedia</p>
+                  <p class="frame112_12_textos">	Fumie Mizuhashi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Eishi Segawa</p>
+                  <p class="frame112_12_textos">TV Man Union</p>
+                  <p class="frame112_12_textos">Oct 6 de 2021 - Dic 22 de 2021</p>
+                  <p class="frame112_12_textos">12</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/komisan-wa-comyushou-desu" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/komi-san-wa-comyushou-desu/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
