--- a/src/app/pages/magic/magic.component.html
+++ b/src/app/pages/magic/magic.component.html
@@ -1,1 +1,48 @@
-<p>magic works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Knight's & Magic</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Un otaku de los mechas ve cumplido su sueño al morir en un accidente y reencarnarse en otro mundo como Ernesti Echevarria, o simplemente Eru. Pues aunque comienza una nueva vida, sigue recordando su pasión y hará todo lo posible para poder pilotar un Silhouette Knight, un robot que existe en su nueva realidad.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Isekai, ciencia ficción fantástica</p>
+                  <p class="frame112_12_textos">Hisago Amazake-no</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Masato Kōda</p>
+                  <p class="frame112_12_textos">8-Bit</p>
+                  <p class="frame112_12_textos">2 de julio de 2017</p>
+                  <p class="frame112_12_textos">13</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/knights-magic" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/knights-magic/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Ingenierias</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Ingenieria</h3>
+          <p class="frame121_text">Mecanica básica de androides especializados</p>
+      </div>
+  </div>
+</div>
