--- a/src/app/pages/steins/steins.component.html
+++ b/src/app/pages/steins/steins.component.html
@@ -1,1 +1,49 @@
-<p>steins works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Steins:Gate</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">La historia se lleva a cabo en Akihabara y se trata de un grupo de amigos que ha personalizado su horno de microondas en un dispositivo que puede enviar mensajes de texto al pasado. A medida que se realizan diferentes experimentos, una organización llamada SERN que ha estado haciendo su propia investigación sobre viaje en el tiempo que sigue la pista y ahora los personajes tienen que encontrar una manera de evitar ser capturados por ellos.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Ciencia ficción, Romance , Psicológico</p>
+                  <p class="frame112_12_textos">Sarachi Yomi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Takeshi Abo</p>
+                  <p class="frame112_12_textos">White Fox</p>
+                  <p class="frame112_12_textos">Julio de 2010</p>
+                  <p class="frame112_12_textos">24 + OVA</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/steinsgate" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/steins-gate/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Ingenierias</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Ingenierias</h3>
+          <p class="frame121_text">Temas mas allá de la comprensión humana, viajes en el tiempo y una posible implicación fisica</p>
+      </div>
+  </div>
+</div>
+
