--- a/src/app/pages/stone/stone.component.html
+++ b/src/app/pages/stone/stone.component.html
@@ -1,1 +1,48 @@
-<p>stone works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Dr.Stone</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Senku es un joven extremadamente inteligente con un gran don para la ciencia y una ácida personalidad, y su mejor amigo es Taiju, que es muy buena persona pero más apto para usar los músculos que para pensar. Cuando tras cierto incidente toda la humanidad acaba convertida en piedra, ellos logran despertarse en un mundo miles de años después, con la civilización humana completamente desaparecida y con toda la humanidad congelada en piedra como ellos estuvieron. Ahora es su obligación rescatar a la gente y crear un nuevo mundo.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Aventura,Ciencia Ficción,Comedia,Drama</p>
+                  <p class="frame112_12_textos">Riichiro Inagaki</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Tatsuya Kato</p>
+                  <p class="frame112_12_textos">TMS Entertainment</p>
+                  <p class="frame112_12_textos">6 de marzo de 2017</p>
+                  <p class="frame112_12_textos">24</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/dr-stone" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/dr-stone/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad Ingenierias</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Ingenierias</h3>
+          <p class="frame121_text">Demostracion del uso de ingenio, matemáticas y física, junto con la química para reconstruir una sociedad humana</p>
+      </div>
+  </div>
+</div>
