--- a/src/app/pages/summer/summer.component.html
+++ b/src/app/pages/summer/summer.component.html
@@ -1,1 +1,42 @@
-<p>summer works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Summer Time Rendering</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Al enterarse de la muerte de Ushio, Shinpei regresa a su ciudad natal de la ciudad de Wakayama en Hitogashima y se reúne con la familia de su amiga de la infancia. El funeral transcurre sin problemas, pero bajo la superficie se está gestando algo extraño en la isla.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Suspenso</p>
+                  <p class="frame112_12_textos">Yasuki Tanaka</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Keiichi Okabe</p>
+                  <p class="frame112_12_textos">OLM</p>
+                  <p class="frame112_12_textos">15 de abril de 2022</p>
+                  <p class="frame112_12_textos">25</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/steinsgate" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/steins-gate/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
+
