--- a/src/app/pages/tate/tate.component.html
+++ b/src/app/pages/tate/tate.component.html
@@ -1,1 +1,42 @@
-<p>tate works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">The Rising of the Shield Hero</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Naofumi Iwatani fue invocado en un mundo paralelo junto a otras tres personas para convertirse en los héroes de ese mundo. Cada uno de los héroes fue equipado con su propia arma legendaria cuando fueron convocados. Naofumi recibió el Escudo, el único equipo defensivo, mientras que los otros recibieron armas capaces de atacar. Debido a la falta de carisma y experiencia, Naofumi terminó con una sola compañera de equipo la cual lo traiciona haciéndolo pasar como un criminal haciendo que tanto su reputación como su personalidad a ojos de otros y así mismo cambien a un ser antipático y deprimente perdiendo la confianza en los demás, debido a que su arma es defensiva Naofumi consigue aliadas para ayudarlo en combate, como Raphtalia una semi-humana mapache, Filo una filolial y Melty una princesa guerrera, que pronto formarán algo más que un simple grupo.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Acción,Aventura,Drama</p>
+                  <p class="frame112_12_textos">Aneko Yusagi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Kevin Penkin</p>
+                  <p class="frame112_12_textos">Kinema Citrus</p>
+                  <p class="frame112_12_textos">29 de octubre de 2012</p>
+                  <p class="frame112_12_textos">12 + OVA</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/tate-no-yuusha-no-nariagari-season-2" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/tate-no-yuusha-no-nariagari/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
+
