--- a/src/app/pages/wakimi/wakimi.component.html
+++ b/src/app/pages/wakimi/wakimi.component.html
@@ -1,1 +1,48 @@
-<p>wakimi works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Shigatsu wa Kimi no Uso</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Basado en el manga original, ganador de premios, Shigatsu wa Kimi no Uso de Naoshi Arakawa, Your lie in April trata de un prodigio del piano que no puede escuchar su música después de haber sufrido un trauma en el cual perdió a su madre y su instructor de piano. Con ambas cosas que le han sido arrebatadas, la vida de Kousei Arima se torna monótona y sin sentido. Un día, a Kousei le presentan a una violinista llamada Kaori Miyazono. A pesar de que su primera impresión de ella fue terrible, la música de Kaori lo atrapó por completo. Libre, poderosa y apasionada - la perfecta presentación de Kaori trae a Kousei de vuelta a la vida. Unidos por la música, ¿podrán los sonidos del alma del violín de Kaori llevarlo a tocar el piano otra vez?</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Musical,comedia dramática</p>
+                  <p class="frame112_12_textos">Naoshi Arakawa</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Masaru Yokoyama</p>
+                  <p class="frame112_12_textos">A-1 Pictures</p>
+                  <p class="frame112_12_textos">6 de mayo de 2011</p>
+                  <p class="frame112_12_textos">23</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/shigatsu-wa-kimi-no-uso" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/shigatsu-wa-kimi-no-uso/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Humanidades</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Humanidades</h3>
+          <p class="frame121_text">Dan a entender como se deben lograr los sueños con el esfuerzo propio, y sin importar que obstáculo se ponga en frente, seguir brillando con la luz de su arte</p>
+      </div>
+  </div>
+</div>
