--- a/src/app/components_paginas/categorias/categorias.component.html
+++ b/src/app/components_paginas/categorias/categorias.component.html
@@ -15,7 +15,7 @@
           <div class="ani__cont-frame_img" id="img1"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Battle Programmer Shirase</h2>
+          <a routerLink="/battle" class="ani__cont-der_title">Battle Programmer Shirase</a>
           <h3 class="ani__cont-der_desc">La historia de BPS gira en torno a un talentoso y misterioso programador llamado Akira Shirase. Por sus increíbles habilidades, es contactado por varias personas (curiosamente, todas ellas muy parecidas y de nombre Akizuki Kaoru) para hacer todo tipo de trabajos extraños relacionados con ordenadores y seguridad.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -32,7 +32,7 @@
           <div class="ani__cont-frame_img" id="img2"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Knight's & Magic</h2>
+          <a routerLink="/magic" class="ani__cont-der_title">Knight's & Magic</a>
           <h3 class="ani__cont-der_desc">Knight's & Magic se sitúa en un mundo donde los caballeros medievales usan robots gigantescos llamados Caballeros Silhouette para luchar contra las bestias demoníacas, animales voraces y mágicos que lo devoran todo a la vista. El protagonista es Tsubasa Kurata, un otaku mecha de Japón que muere en un accidente automovilístico.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -52,7 +52,7 @@
           <div class="ani__cont-frame_img" id="img3"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Dr. Stone</h2>
+          <a routerLink="/stone" class="ani__cont-der_title">Dr. Stone</a>
           <h3 class="ani__cont-der_desc">Senku es un joven extremadamente inteligente con un gran don para la ciencia y una ácida personalidad, y su mejor amigo es Taiju, que es muy buena persona pero más apto para usar los músculos que para pensar. Cuando tras cierto incidente toda la humanidad acaba convertida en piedra, ellos logran despertarse en un mundo miles de años después, con la civilización humana completamente desaparecida y con toda la humanidad congelada en piedra como ellos estuvieron.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
@@ -75,7 +75,7 @@
           <div class="ani__cont-frame_img" id="img4"></div>
       </div>
       <div class="ani__cont-der">
-          <h2 class="ani__cont-der_title">Steins;Gate</h2>
+          <a routerLink="/steins" class="ani__cont-der_title">Steins;Gate</a>
           <h3 class="ani__cont-der_desc">Sigue la historia de un auto-proclamado científico loco llamado Rintarō Okabe, quien junto con sus amigos, logra inventar un microondas que puede enviar mensajes de texto al pasado (denominado teléfono-microondas) y hacen uso de este dispositivo para moverse entre mundos alternos.</h3>
           <div class="ani__cont-der_sub">
               <div class="ani__cont-der_sub-item">
