--- a/src/app/pages/ace/ace.component.html
+++ b/src/app/pages/ace/ace.component.html
@@ -1,1 +1,48 @@
-<p>ace works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Acce Attorney</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Franquicia de videojuegos perteneciente al género de la aventura conversacional y novela gráfica desarrollada por Capcom, conocida en Japón como Gyakuten Saiban, la cual tiene numerosos juegos, novelas y adaptaciones al manga, ademas de una película con actores reales e incluso ha sido adaptado a un musical. También ha participado en numerosos crossover. Como letrado esperan asesinatos, investigaciones y juicios a los que deberían enfrentar para descubrir la verdad.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Aventura gráfica</p>
+                  <p class="frame112_12_textos">Shu Takumi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Motohide Eshiro</p>
+                  <p class="frame112_12_textos">Capcom</p>
+                  <p class="frame112_12_textos">Oct 6 de 2021 - Dic 22 de 2021</p>
+                  <p class="frame112_12_textos">12</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/gyakuten-saiban-sono-shinjitsu-igiari" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/gyakuten-saiban-sono-shinjitsu-igi-ari/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Derecho</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Derecho</h3>
+          <p class="frame121_text">muestra la vida de un abogado, como afronta los casos y como llega a una conclusión en base a evidencia solida propuesta con interinidad.</p>
+      </div>
+  </div>
+</div>
