--- a/src/app/pages/battle/battle.component.html
+++ b/src/app/pages/battle/battle.component.html
@@ -1,1 +1,49 @@
-<p>battle works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Battle Programmer Shirase</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">La historia de BPS gira en torno a un talentoso y misterioso programador llamado Akira Shirase. Por sus increíbles habilidades, es contactado por varias personas (curiosamente, todas ellas muy parecidas y de nombre Akizuki Kaoru) para hacer todo tipo de trabajos extraños relacionados con ordenadores y seguridad. Al principio, los capítulos giran en torno a trabajos que exhiben sus habilidades, pero más adelante en la serie, reaparecen personajes para ofrecer ayuda o dar giros al guion. Se han dado pistas del colegio al que Shirase fue, y finalmente aparece en el último episodio, cuando algunos personajes muestran sus relaciones con los demás. A pesar de todo, la serie no tuvo continuación.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Comedia</p>
+                  <p class="frame112_12_textos">Hiroki Hayashi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Takeshi Abo</p>
+                  <p class="frame112_12_textos">AIC</p>
+                  <p class="frame112_12_textos">3 de octubre de 2003</p>
+                  <p class="frame112_12_textos">15</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/steinsgate" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/steins-gate/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Ingenierias</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Ingenierias</h3>
+          <p class="frame121_text">Las infinitas posibilidades del uso de la progamacion, tanto para bien como para mal</p>
+      </div>
+  </div>
+</div>
+
