--- a/src/app/pages/date/date.component.html
+++ b/src/app/pages/date/date.component.html
@@ -1,1 +1,42 @@
-<p>date works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Date a Live</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Itsuka Shidou es un estudiante de instituto que, durante las vacaciones, vive en primera persona un suceso sin igual. Ante él aparece una chica con armadura, que destruye la ciudad que tiene delante. La chica responde ante el nombre de Tooka, y según la hermana de Shidou, es un espíritu, los cuales causaron un terremoto espacio-temporal 30 años atrás. La hermana de Shidou revela que su verdadera identidad es la de la líder de la organización Ratatosk y le cuenta a Shidou que la única manera que tienen de salvar el mundo es hacer que Tooka se acabe enamorando de él y tengan una cita.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Acción,ciencia ficción,fantasía,comedia</p>
+                  <p class="frame112_12_textos">Kōshi Tachibana</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Go Sakabe</p>
+                  <p class="frame112_12_textos">AIC PLUS+</p>
+                  <p class="frame112_12_textos">31 de marzo de 2013</p>
+                  <p class="frame112_12_textos">12 + OVA</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/date-a-live" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/date-a-live/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
+
