--- a/src/app/pages/egg/egg.component.html
+++ b/src/app/pages/egg/egg.component.html
@@ -1,1 +1,48 @@
-<p>egg works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Wonder Egg Priority</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">La historia de este anime original comienza cuando la protagonista, una chica de 14 años llamada Ohto Ai, escucha una misteriosa voz mientras camina por la noche en su pueblo natal. Esa voz le otorga un huevo y le indica: “Si deseas cambiar el futuro, solo tienes que elegir ahora. Ahora, cree en ti misma y rompe el huevo”. Lo que le espera a Ai después de romper el huevo...</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Drama,fantasía oscura,mahou shoujo</p>
+                  <p class="frame112_12_textos">Shinji Nojima</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">DE DE MOUSE Mito</p>
+                  <p class="frame112_12_textos">CloverWorks</p>
+                  <p class="frame112_12_textos">12 de enero de 2021</p>
+                  <p class="frame112_12_textos">12</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/wonder-egg-priority" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/wonder-egg-priority/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Salud</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Salud</h3>
+          <p class="frame121_text">Como el ambiente social afecta psicológicamente, además de las causas y consecuencias del suicidio.</p>
+      </div>
+  </div>
+</div>
