--- a/src/app/pages/food/food.component.html
+++ b/src/app/pages/food/food.component.html
@@ -1,11 +1,11 @@
 <div class="frame1">
-  <h1 class="frame1_titulo">Given</h1>
+  <h1 class="frame1_titulo">Shokugeki no Souma</h1>
   <div class="frame11">
       <div class="frame111">
           <div class="frame111_img"></div>
           <div class="frame111_1">
               <h3 class="frame111_1_titulo">Sinopsis</h3>
-              <p class="frame111_1_text">Ritsuka Uenoyama es un joven que se aficionó a la guitarra siendo muy joven y tras mucho esfuerzo, consiguió alcanzar el nivel que quería, pero la guitarra que tanto amaba ha perdido su brillo y no le divierte ni le apasiona como antes... hasta que un día conoce a Mafuyu Sato, un joven que se aferra a una guitarra con toda su alma pese a que no sabe tocarla y quien le pedirá que le enseñe a tocar... haciendo que todo en la vida de Uenoyama cambie y la música acelere nuevamente su corazón.</p>
+              <p class="frame111_1_text">El sueño de Yukihira Souma es convertirse en un chef de tiempo completo en el restorán de su padre y sobrepasar su habilidad culinaria. Cuando Yukihira se gradúa de secundaria, su padre, Yukihira Jouichirou, cierra su restorán para ir a cocinar a europa. Aunque derrotado, el espíritu luchador de Souma es reavivado por un desafío de Jouchirou, el cual es sobrevivir en una escuela de élite culinario donde solo el 10% de los estudiantes logra graduarse. ¿Podrá Souma lograrlo?</p>
           </div>
       </div>
       <div class="frame112">
@@ -20,21 +20,21 @@
                   <p class="frame112_11_titulos">Episodios</p>
               </div>
               <div class="frame112_12">
-                  <p class="frame112_12_textos">Drama, musical, romance</p>
-                  <p class="frame112_12_textos">Natsuki Kizu</p>
+                  <p class="frame112_12_textos">Comedia, cocina, drama, escolar, acción</p>
+                  <p class="frame112_12_textos">Yūto Tsukuda</p>
                   <p class="frame112_12_textos">Japones</p>
-                  <p class="frame112_12_textos">Michiru</p>
-                  <p class="frame112_12_textos">Lerche</p>
-                  <p class="frame112_12_textos">11 de julio de 2019</p>
-                  <p class="frame112_12_textos">11</p>
+                  <p class="frame112_12_textos">Tatsuya Katō</p>
+                  <p class="frame112_12_textos">J.C.Staff</p>
+                  <p class="frame112_12_textos">3 de abril de 2015</p>
+                  <p class="frame112_12_textos">24</p>
               </div>
           </div>
           <h3 class="frame112_ver">Ver por</h3>
           <div class="frame112_2">
-              <a href="https://www3.animeflv.net/anime/given" class="frame112_2_text">Página 1</a>
+              <a href="https://www3.animeflv.net/anime/shokugeki-no-souma" class="frame112_2_text">Página 1</a>
           </div>
           <div class="frame112_2">
-              <a href="https://jkanime.net/given/" class="frame112_2_text">Página 2</a>
+              <a href="https://jkanime.net/shokugeki-no-souma/" class="frame112_2_text">Página 2</a>
           </div>
       </div>
   </div>
