--- a/src/app/pages/food/food.component.scss
+++ b/src/app/pages/food/food.component.scss
@@ -68,7 +68,7 @@
   width: 328px;
   height: 465px;
 
-  background: url("https://cl.buscafs.com/www.levelup.com/public/uploads/images/422049_832x1248.jpg");
+  background: url("https://img1.ak.crunchyroll.com/i/spire2/9f9d3ec824444991d22082852cdc3c741586972680_full.jpg");
   background-size: 100%;
   border-radius: 20px;
 
