--- a/src/app/pages/hetalia/hetalia.component.scss
+++ b/src/app/pages/hetalia/hetalia.component.scss
@@ -68,7 +68,7 @@
   width: 328px;
   height: 465px;
 
-  background: url("https://cl.buscafs.com/www.levelup.com/public/uploads/images/422049_832x1248.jpg");
+  background: url("https://es.web.img2.acsta.net/pictures/21/03/24/16/48/3868977.jpg");
   background-size: 100%;
   border-radius: 20px;
 
