--- a/src/app/pages/monster/monster.component.html
+++ b/src/app/pages/monster/monster.component.html
@@ -1,1 +1,48 @@
-<p>monster works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Monster Musume no Oisha-san</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Hace mucho tiempo, humanos y monstruos estuvieron en guerra durante 100 años. Cuando ambos bandos estuvieron muy exhaustos para continuar, la guerra terminó. Humanos y monstruos empezaron a interactuar de nuevo. En el pueblo de Lindworm donde monstruos y humanos coexisten, el Dr. Glenn está a cargo de una clínica para chicas monstruo con su enfermera, una lamia llamada Sapphee. Recibir una propuesta de matrimonio por parte de una centauro herida en batalla, palpar suavemente la herida de una sirena, o suturar las delicadas heridas de una golem son cosas cotidianas en su trabajo.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Fantasía,ecchi,harem</p>
+                  <p class="frame112_12_textos">Yoshino Origuchi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">TO-MAS</p>
+                  <p class="frame112_12_textos">Arvo Animation</p>
+                  <p class="frame112_12_textos">24 de junio de 2016</p>
+                  <p class="frame112_12_textos">12</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/monster-musume-no-iru-nichijou/" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/given/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad de Salud</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Salud</h3>
+          <p class="frame121_text">como debe ser el actuar de un medico al curar a cualquiera que lo necesite.</p>
+      </div>
+  </div>
+</div>
