--- a/src/app/pages/nisekoi/nisekoi.component.html
+++ b/src/app/pages/nisekoi/nisekoi.component.html
@@ -1,1 +1,41 @@
-<p>nisekoi works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Nisekoi</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">La historia gira entorno a Raku Ichijou y Kirisaki Chitoge que son hijos de los lideres de los grupos mas fuertes de la ciudad, él de un yakuza y ella de un gangster deberán fingir ser novios ante los dos grupos para así evitar una guerra entre estos. Raku aparenta ser un chico común y corriente, lo cual no es, un día, Raku conoce a la nueva chica de su colegio, Chitoge, violenta y arrogante, todo lo contrario de la chica ideal de Raku, Kosaki Onodera, muy parecida a la chica con quien hizo la promesa de volverse a ver y abrirían la cerradura del collar que posee con una llave.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">comedia romántica</p>
+                  <p class="frame112_12_textos">Naoshi Komi</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Satoru Kousaki</p>
+                  <p class="frame112_12_textos">Shaft</p>
+                  <p class="frame112_12_textos">10 de abril de 2015</p>
+                  <p class="frame112_12_textos">12</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/nisekoi" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/nisekoi/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
