--- a/src/app/pages/spice/spice.component.html
+++ b/src/app/pages/spice/spice.component.html
@@ -1,1 +1,48 @@
-<p>spice works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Spice and Wolf</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Lawrence es un mercader ambulante que en una noche de ésas, se encuentra a la diosa Horo la Sabia, divinidad pagana de las Cosechas. Horo ha adoptado ahora su forma humana-loba tras muchos años, al conseguir liberarse de su promesa con el pueblo. La chica empieza a viajar con él, y con su gran sabiduría, hace que Lawrence incremente sus ganancias... Sin embargo, también tendrá que lidiar con la persecución de la Iglesia, que no ven con buenos ojos la naturaleza de Horo.</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Aventura, Drama, Fantasía, Romance</p>
+                  <p class="frame112_12_textos">Isuna Hasekura</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Kenichirō Suehiro</p>
+                  <p class="frame112_12_textos">Brain's Base</p>
+                  <p class="frame112_12_textos">9 de julio de 2009</p>
+                  <p class="frame112_12_textos">12 + OVA</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/spice-and-wolf" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/spice-and-wolf/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+  <h2 class="frame1_sub">Facultad Economia</h2>
+  <div class="frame12">
+      <div class="frame121">
+          <h3 class="frame121_carrera">Economicas</h3>
+          <p class="frame121_text">Función básica del trueque y como este evoluciona a ser un sistema económico global.</p>
+      </div>
+  </div>
+</div>
