--- a/src/app/pages/spy/spy.component.html
+++ b/src/app/pages/spy/spy.component.html
@@ -1,1 +1,42 @@
-<p>spy works!</p>
+<div class="frame1">
+  <h1 class="frame1_titulo">Spy × Family</h1>
+  <div class="frame11">
+      <div class="frame111">
+          <div class="frame111_img"></div>
+          <div class="frame111_1">
+              <h3 class="frame111_1_titulo">Sinopsis</h3>
+              <p class="frame111_1_text">Todo el mundo tiene una parte de sí mismos que no puede mostrar a los demás. En una era en la que las naciones de todo el mundo se encuentran involucradas en una feroz guerra de información a puerta cerrada, Ostania y Westalis llevan décadas en guerra fría. La División de Inteligencia de Westalis (WISE) envía a su mejor espía, "Twilight", en una misión ultrasecreta para vigilar los movimientos de Donovan Desmond, quien dirige el Partido Nacional por la Unidad de Ostania, responsable de bombardear los esfuerzos de paz entre ambos países. La misión tiene por nombre "Operación Strix".</p>
+          </div>
+      </div>
+      <div class="frame112">
+          <div class="frame112_1">
+              <div class="frame112_11">
+                  <p class="frame112_11_titulos">Género</p>
+                  <p class="frame112_11_titulos">Escritores</p>
+                  <p class="frame112_11_titulos">Idiomas</p>
+                  <p class="frame112_11_titulos">Música</p>
+                  <p class="frame112_11_titulos">Estudio</p>
+                  <p class="frame112_11_titulos">Fecha</p>
+                  <p class="frame112_11_titulos">Episodios</p>
+              </div>
+              <div class="frame112_12">
+                  <p class="frame112_12_textos">Comedia, espionaje</p>
+                  <p class="frame112_12_textos">Tatsuya Endō</p>
+                  <p class="frame112_12_textos">Japones</p>
+                  <p class="frame112_12_textos">Keiichi Okabe</p>
+                  <p class="frame112_12_textos">CloverWorks</p>
+                  <p class="frame112_12_textos">9 de abril de 2022</p>
+                  <p class="frame112_12_textos">13</p>
+              </div>
+          </div>
+          <h3 class="frame112_ver">Ver por</h3>
+          <div class="frame112_2">
+              <a href="https://www3.animeflv.net/anime/spy-x-family" class="frame112_2_text">Página 1</a>
+          </div>
+          <div class="frame112_2">
+              <a href="https://jkanime.net/spy-x-family/" class="frame112_2_text">Página 2</a>
+          </div>
+      </div>
+  </div>
+</div>
+
