--- a/src/app/pages/young/young.component.scss
+++ b/src/app/pages/young/young.component.scss
@@ -68,7 +68,7 @@
   width: 328px;
   height: 465px;
 
-  background: url("https://cl.buscafs.com/www.levelup.com/public/uploads/images/422049_832x1248.jpg");
+  background: url("https://i.pinimg.com/originals/47/d6/6d/47d66d6c37b46ab631f8b5c1935a7054.jpg");
   background-size: 100%;
   border-radius: 20px;
 
